# otcv8-dev

./: .buildinfo  .gitattributes  .gitignore  .prettierrc  DOCUMENTATION_SUMMARY.html  README.html  genindex.html  index.html  mkdocs.modules.yml  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  requirements-rag.txt  requirements.txt  search.html  searchindex.js  sitemap.xml
.doctrees/: DOCUMENTATION_SUMMARY.doctree  README.doctree  codeautolink-cache.json  index.doctree
.github/: copilot-instructions.md  instructions.md
11_datasets/: index.html
12_diagrams/: index.html
13_csv_snippets/: index.html
__docs_backup_20251007_083232/: index.md
__md_backup_20251007_093806/: index.md
_static/: copybutton.js
api/: otcv8-full-api.html
architektura/: client_overview.html  framework_overview.html  src_client.html  src_framework.html
chapters/: 01_core.html  01_specyfikacja.html  02_events.html  03_modules.html  04_ui.html  05_assets.html  06_network.html  07_settings_crypto.html  08_audio.html  09_logging.html  10_game_runtime.html  README.html  chapter_01_specyfikacja_implementacji_studio_react_electron_dla_skryptow_otclient_v_8_v_bot.html  chapter_02_events_docs_export_kit_authoring_agent_ready.html  chapter_03_modules_docs_export_kit_authoring_agent_ready.html  chapter_04_ui_docs_export_kit_authoring_agent_ready.html  chapter_05_assets_docs_export_kit_authoring_agent_ready.html  chapter_06_network_docs_export_kit_authoring_agent_ready.html  chapter_07_settings_crypto_docs_export_kit_authoring_agent_ready.html  (+3 more)
(+6234 files in other folders)
