[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "otcv8-docs"
version = "0.1.0"
description = "Dokumentacja OTCv8 (Sphinx + MyST)"
requires-python = ">=3.10"
dependencies = [
"sphinx>=7.2",
"myst-parser>=2.0",
"furo>=2023.7.26",
"sphinx-copybutton>=0.5.2",
"sphinx-design>=0.6.0"s
]
